--- a/code/apidoc.yml
+++ b/code/apidoc.yml
@@ -7,10 +7,10 @@ frontend:
       author: 作者
       press: 出版社
     output:
-      - _case: 成功
+      - _case: success
         code!: 0
         id: 42
-      - _case: 失败
+      - _case: failed
         code!: 1
         error:
           name: empty param
@@ -23,9 +23,9 @@ frontend:
       author: 作者
       press: 出版社
     output:
-      - _case: 成功
+      - _case: success
         code!: 0
-      - _case: 空ID
+      - _case: empty ID
         code!: 1
         message!: 该书已被删除
   - url: /book/([0-9]+)
@@ -34,13 +34,13 @@ frontend:
     input:
       _1->id: 书ID
     output:
-      - _case: 成功
+      - _case: success
         code!: 0
         detail:
           name: 深入理解计算机系统
           author: "[美国] Randal E·Bryant / David O'Hallaron"
           press: 中国电力出版社
-      - _case: 空ID
+      - _case: empty ID
         code!: 0
         message!: 该书已被删除
   - url: /book/list
@@ -48,7 +48,7 @@ frontend:
     method: get
     input: {}
     output:
-      - _case: 成功
+      - _case: success
         code!: 0
         list:
           - id: 42
@@ -64,7 +64,7 @@ frontend:
     method: delete
     input: {}
     output:
-      - _case: 成功
+      - _case: success
         code!: 0
   - url: /login
     title: 用户登录
@@ -73,14 +73,14 @@ frontend:
       username: 用户名
       password: 密码
     output:
-      - _case: 登录成功
+      - _case: success
         code!: 0
-      - _case: 登录失败
+      - _case: failed
         code!: 1
   - url: /logout
     title: 用户退出登录
     method: post
     input: {}
     output:
-      - _case: 成功
+      - _case: success
         code!: 0
