--- a/code/apidoc.yml
+++ b/code/apidoc.yml
@@ -1,8 +1,9 @@
 frontend:
-  - url: /book/add
+  - url: /book/save
     title: 新增图书
     method: post
     input:
+      id n?: 书ID，空=新增，非空=修改
       name: 书名
       author: 作者
       press: 出版社
@@ -10,29 +11,16 @@ frontend:
       - _case: success
         code!: 0
         id: 42
-      - _case: failed
-        code!: 1
-        error:
-          name: empty param
-  - url: /book/edit
-    title: 修改图书
-    method: post
-    input:
-      id: 书ID
-      name: 书名
-      author: 作者
-      press: 出版社
-    output:
-      - _case: success
-        code!: 0
-      - _case: empty ID
+      - _case: ID notfound
         code!: 1
         message!: 该书已被删除
+      - _case: empty param
+        code!: 2
   - url: /book/([0-9]+)
     title: 查询图书详情
     method: get
     input:
-      _1->id: 书ID
+      _1->id n: 书ID
     output:
       - _case: success
         code!: 0
@@ -40,7 +28,7 @@ frontend:
           name: 深入理解计算机系统
           author: "[美国] Randal E·Bryant / David O'Hallaron"
           press: 中国电力出版社
-      - _case: empty ID
+      - _case: ID notfound
         code!: 0
         message!: 该书已被删除
   - url: /book/list
@@ -62,7 +50,8 @@ frontend:
   - url: /book/([0-9]+)
     title: 删除图书
     method: delete
-    input: {}
+    input:
+      _1->id n: 书ID
     output:
       - _case: success
         code!: 0
