--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,4 +5,14 @@ py:
     build: ./
     ports:
         - "8092:8092"
+    links:
+        - mysql
     restart: always
+mysql:
+    image: registry.cn-hangzhou.aliyuncs.com/qinyujia-test/mysql
+    ports: ["3306"]
+    environment:
+        MYSQL_ROOT_PASSWORD: "pwd123456"
+    command: [mysqld, --character-set-server=utf8mb4, --collation-server=utf8mb4_unicode_ci]
+    volumes:
+        - "./dbdump:/docker-entrypoint-initdb.d"
